force-app/main/default/objects/ssot__GiftDesignation__dlm/fields/ssot__CurrentYearTransactionCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__CurrentYearTransactionCount__c</fullName>
    <label>Current Year Transaction Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CurrentYearTransactionCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>