force-app/main/default/objects/ssot__GiftDesignation__dlm/fields/ssot__LastTwoYearTrxnAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__LastTwoYearTrxnAmount__c</fullName>
    <label>Last Two Year Trxn Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LastTwoYearTrxnAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>