force-app/main/default/objects/ssot__GiftDesignation__dlm/fields/ssot__LastTwoYearTrxnCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__LastTwoYearTrxnCount__c</fullName>
    <label>Last Two Year Trxn Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LastTwoYearTrxnCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>