force-app/main/default/objects/ssot__GiftDesignation__dlm/fields/ssot__LastYearTransactionCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__LastYearTransactionCount__c</fullName>
    <label>Last Year Transaction Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LastYearTransactionCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>