force-app/main/default/objects/ssot__GiftDesignation__dlm/fields/ssot__LowestTransactionAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__LowestTransactionAmount__c</fullName>
    <label>Lowest Transaction Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LowestTransactionAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>